--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing = "20">
         <tr>
-            <td><img src = "Bhoomika_dp.jpg" alt = " Bhoomika's Profile Picture" width = "200" height = "200"></td>
+            <td><img src = "images/bhoomika.jpg" alt = " Bhoomika's Profile Picture" width = "200" height = "200"></td>
             <td><h1>Bhoomika Dhaka</h1>
                 <p><em>Student at <strong>IIT Guwahati</strong></em></p>
                 <p>I am 20 years old and pursuing B.Tech in <a href="https://iitg.ac.in/chemeng/ "> Chemical Engineering </a>. I am interested in SDE.</p></td>
