--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>🤔 Bhoomika does Shit</title>
+    <title> Bhoomika personal site/title>
 </head>
 <body>
     <table cellspacing = "20">
